# second

second/: CMakeCache.txt  CMakeLists.txt  CRat.cpp  CRat.hpp  Header.hpp  autotest.cpp  main.cpp
second.xcodeproj/: project.pbxproj
second.xcodeproj/xcuserdata/artemijdanilov.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
